# vsMetaFileEncoder

./: .gitignore  README.md  pyproject.toml  vsmetaEncoder.py
doc/: FileAnalysis-Incomplete.xlsx  Thumbs.db  search_check.py  vsMetaFileEncoder - Verknüpfung.lnk
samples/: film2.mp4.vsmeta  serie.vsmeta  sonstige.mp4.vsmeta
src/: README.md  setup.py
src/doc/: Thumbs.db
src/tests/: template1.vsmeta  template4.vsmeta  template4_poster.vsmeta  template5_poster.vsmeta  template_movie1.vsmeta  template_movie10.vsmeta  template_movie11.vsmeta  template_movie12.vsmeta  template_movie13.vsmeta  template_movie2.vsmeta  template_movie3.vsmeta  template_movie4.vsmeta  template_movie5_poster.vsmeta  template_series20.vsmeta  template_series21.vsmeta  template_series22.vsmeta  template_series24.vsmeta  testHelpers.py  testVsMetaBase.py  testVsMetaMovieEncoder.py  test_result_encoded.vsmeta  testvsmetaDecoder.py  testvsmetaEncoder.py  testvsmetaSeriesEncoder.py
src/vsmetaCodec/: __init__.py  vsmetaBase.py  vsmetaCode.py  vsmetaDecoder.py  vsmetaEncoder.py  vsmetaInfo.py
src/vsmetaEncoder/: __init__.py  vsmetaBase.py  vsmetaEncoder.py  vsmetaImageInfo.py  vsmetaInfo.py  vsmetaListInfo.py  vsmetaMovieEncoder.py  vsmetaSeriesEncoder.py
tests/: TestHelpers.py  TestvsmetaEncoder.py  template2.vsmeta  template3.vsmeta  template5-reconstructed.vsmeta  template5.vsmeta  template_movie1.vsmeta.bak  testVsMetaBase.py  testVsMetaMovieEncoder.py  testvsmetaEncoder.py
